--- a/Transmogrify.Data/Transmogrify.Data.csproj
+++ b/Transmogrify.Data/Transmogrify.Data.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="9.2.3" />
+  </ItemGroup>
+
 </Project>
