--- a/Transmogrify.Data/Transmogrify.Data.csproj
+++ b/Transmogrify.Data/Transmogrify.Data.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="9.2.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
 
 </Project>
