--- a/Transmogrify.Tests/Transmogrify.Tests.csproj
+++ b/Transmogrify.Tests/Transmogrify.Tests.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Project001.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Include="Project001.json" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.8.0" />
     <PackageReference Include="xunit" Version="2.3.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.3.1" />
