--- a/Transmogrify.Engine/Transmogrify.Engine.csproj
+++ b/Transmogrify.Engine/Transmogrify.Engine.csproj
@@ -1,7 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <OutputType>Library</OutputType>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <ApplicationIcon />
+    <StartupObject />
+    <AssemblyName>Transmogrify.Engine</AssemblyName>
+    <RootNamespace>Transmogrify.Engine</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
