Moving project overview canvas logic into its own control

--- a/Transmogrify/Transmogrify.csproj
+++ b/Transmogrify/Transmogrify.csproj
@@ -10,6 +10,7 @@
     <None Remove="Pages\EndpointEditor.xaml" />
     <None Remove="Pages\MappingEditor.xaml" />
     <None Remove="Pages\ProjectOverview.xaml" />
+    <None Remove="Pages\ProjectOverviewControls\ProjectCanvas.xaml" />
     <None Remove="Pages\ProjectOverviewControls\ProjectEndpoint.xaml" />
     <None Remove="Pages\ProjectOverviewControls\ProjectMapping.xaml" />
   </ItemGroup>
@@ -34,6 +35,9 @@
     <Compile Update="Pages\ProjectOverviewControls\ProjectEndpoint.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Update="Pages\ProjectOverviewControls\ProjectCanvas.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="Pages\ProjectOverviewControls\ProjectMapping.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -48,6 +52,9 @@
     </Page>
     <Page Update="Pages\ProjectOverviewControls\ProjectEndpoint.xaml">
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Update="Pages\ProjectOverviewControls\ProjectCanvas.xaml">
+      <SubType>Designer</SubType>
     </Page>
     <Page Update="Pages\ProjectOverviewControls\ProjectMapping.xaml">
       <Generator>MSBuild:Compile</Generator>
