--- a/Transmogrify/Transmogrify.csproj
+++ b/Transmogrify/Transmogrify.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="LibraryWindow.xaml" />
     <None Remove="Pages\EndpointEditor.xaml" />
     <None Remove="Pages\MappingEditor.xaml" />
     <None Remove="Pages\ProjectOverview.xaml" />
@@ -27,6 +28,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="LibraryWindow.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="Pages\EndpointEditor.xaml.cs">
       <SubType>Code</SubType>
     </Compile>
@@ -48,6 +52,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Page Update="LibraryWindow.xaml">
+      <SubType>Designer</SubType>
+    </Page>
     <Page Update="Pages\EndpointEditor.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
